# tf-pose-estimation

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt  run.py  run_checkpoint.py  run_directory.py  run_video.py  run_webcam.py  setup.py
docker/: Dockerfile  README.md
etcs/: experiments.md  feature.md  reference.md  ros.md  training.md
launch/: demo_video.launch
models/graph/mobilenet_v2_small/: graph_opt.pb
msg/: BodyPartElm.msg  Person.msg  Persons.msg
tf_pose/: common.py  estimator.py  eval.py  network_base.py  network_mobilenet_v2.py  networks.py  pose_dataset.py  runner.py  train.py
tf_pose/mobilenet/: conv_blocks.py  mobilenet.py  mobilenet_v2.py
tf_pose/tensblur/: smoother.py
