<?xml version="1.0"?>
<package>
  <name>tfpose_ros</name>
  <version>0.1.0</version>
  <description>ROS Package for Human Pose Estimation Implemented in Tensorflow</description>

  <maintainer email="ildoo@ildoo.net">Curtis Kim</maintainer>

  <license>GNU2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>